momo-project/kubernetes/frontend/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  revisionHistoryLimit: 15
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: gitlab.praktikum-services.ru:5050/std-010-008/momo-project/momo-frontend:1.0.0
          imagePullPolicy: Always
          volumeMounts:
              - name: nginx-conf
                mountPath: /etc/nginx/nginx.conf
                subPath: nginx.conf
                readOnly: true
          ports:
            - name: frontend
              containerPort: 80
      imagePullSecrets:
        - name: docker-config-secret
      volumes:
      - name: nginx-conf
        configMap:
          name: nginx-conf
          items:
            - key: nginx.conf
              path: nginx.conf
...
