momo-project/kubernetes/frontend/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  type: NodePort
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 80
      nodePort: 30081
  selector:
    app: frontend
...
